# gde

./: .gitignore  README.md  TODO.md  package.json  pyproject.toml  tsconfig.json  vite.config.js
gde/: __init__.py  api.py  app_init.py  cli.py  logging.py  main.py  schema.py  settings.py  template_config.py  template_tags.py  views.py
gde/commands/: db.py
gde/db/: __init__.py  models.py
gde/js/: GDEDetail.vue  GDEMain.vue  GDETest.vue  VueHello.vue  common_vue.js  gde.js  graph_nodes_utils.js  graph_nodes_utils.ts  index.js  main.js  store.ts  type_defs.ts
gde/js/components/: AddNodeDialog.vue  ConfigurationPanel.vue  DataEditor.vue  EditableField.vue  Field.vue  FieldManager.vue  NodeEditor.vue  NodeInfoDisplay.vue  NodeTypeManager.vue
gde/js/plugins/: vuetify.js
gde/schemas/: __init__.py  we.py
gde/templates/: base.html  gde-detail.html  gde-main.html  index.html  test.html
gde/utils/: cbv.py  crud.py  dict_list_tools.py  import_utils.py  inferring_router.py  node_manager.py
static/: manifest.json  mdb.dark.min.css  mdb.dark.min.css.map  mdb.dark.rtl.min.css  style.css
