[tool.poetry]
name = "gde"
version = "0.1.0"
description = ""
authors = ["Kashif Iftikhar <kashif@compulife.com.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
ruff = "^0.1.1"
black = "^23.10.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["gde"]
