[tool.poetry]
name = "gde"
version = "0.1.0"
description = ""
authors = ["Kashif Iftikhar <kashif@compulife.com.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
arango-orm = {path = "../arango-orm", develop = true}
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.6.0"
python-slugify = "^8.0.1"
fastapi-views = { git = "https://github.com/performancemedia/fastapi-views", rev = "4f1119232eed75f6fe288b571444f99eec4d54a2" }

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
ruff = "^0.1.1"
black = "^23.10.0"
ipython = "^8.16.1"

[tool.poetry.scripts]
gde = 'gde.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["gde"]
